字符串知识汇总.md

--- a/docs/板子/字符串知识汇总.md
+++ b/docs/板子/字符串知识汇总.md
@@ -3,7 +3,8 @@
 - [字符串知识汇总](#字符串知识汇总)
   - [字符串哈希](#字符串哈希)
   - [二分哈希求最大回文子串](#二分哈希求最大回文子串)
-  - [字符串哈希 - 暴力求最小循环节](#字符串哈希---暴力求最小循环节)
+  - [字符串哈希 - 求最小循环节](#字符串哈希---求最小循环节)
+  - [字符串哈希 - 枚举因子数求子串的最小循环节](#字符串哈希---枚举因子数求子串的最小循环节)
   - [Manacher 求最大回文子串](#manacher-求最大回文子串)
   - [KMP](#kmp)
 
@@ -160,7 +161,7 @@ namespace lrq {
 
 ---
 
-## [字符串哈希 - 暴力求最小循环节](https://ac.nowcoder.com/acm/contest/42400/M)
+## [字符串哈希 - 求最小循环节](https://ac.nowcoder.com/acm/contest/42400/M)
 
 给定一个字符串 $S = TTTTTTTTTT\cdots$
 
@@ -217,6 +218,88 @@ namespace lrq {
         }
         if (len > (n >> 1)) len = n;
         return std::string(s.begin() + 1, s.begin() + 1 + len);
+    }
+}
+```
+
+## 字符串哈希 - 枚举因子数求子串的最小循环节
+
+```cpp
+namespace lrq {
+    const ll N = 2e6;
+    ll R1 = 31, R2 = 131313;
+    ll M1 = 1e9 + 7, M2 = 1e9 + 9;
+    ll H1[N], H2[N]; // 字符串的哈希值
+    ll P1[N], P2[N]; // 进制次方
+    std::string s;   // 字符串从 1 开始
+    ll n;            // 字符串的长度
+    void init() {
+        P1[0] = P2[0] = 1;
+        for (ll i = 1; i <= n; i ++) {
+            P1[i] = P1[i - 1] * R1 % M1;
+            P2[i] = P2[i - 1] * R2 % M2;
+            H1[i] = (H1[i - 1] * R1 % M1 + s[i]) % M1;
+            H2[i] = (H2[i - 1] * R2 % M2 + s[i]) % M2;
+        }
+    }
+    std::pair<ll, ll> get(ll l, ll r) {
+        return {
+            ((H1[r] - H1[l - 1] * P1[r - l + 1] % M1) % M1 + M1) % M1,
+            ((H2[r] - H2[l - 1] * P2[r - l + 1] % M2) % M2 + M2) % M2
+        };
+    }
+    // 旧版本，暴力枚举长度为 len 的各部分是否相同来判断循环节
+    // std::string get_loop(ll& len) {
+    //     len = 1;
+    //     while (len < n) {
+    //         auto hs = get(1, len);
+    //         for (ll i = 1; i + len - 1 <= n; i += len) {
+    //             if (get(i, i + len - 1) != hs) {
+    //                 len ++; goto lab;
+    //             }
+    //         }
+    //         break;
+    //         lab:;
+    //     }
+    //     if (len > n / 2) len = n;
+    //     return std::string(s.begin() + 1, s.begin() + 1 + len);
+    // }
+    // 新版本，利用最大相同前后缀找 s 的最小循环节
+    std::string get_loop(ll& len) {
+        for (len = 1; len <= (n >> 1); len ++) {
+            if (get(1, n - len) == get(len + 1, n)) break;
+        }
+        if (len > (n >> 1)) len = n;
+        return std::string(s.begin() + 1, s.begin() + 1 + len);
+    }
+    // 寻找子串 s[l~j] 的循环节
+    typedef std::vector<ll> vll;
+    vll dv_mi[N];
+    vll dv_mx[N];
+    // 预处理出 1 ~ n 内每一个数的因子数
+    // 时间复杂度: n/1 + n/2 + n/3 + ··· + n/n <= nlog(n)
+    // 1e6 内最大因子数个数：240
+    // 平均因子数个数：13
+    void init_dv() {
+        // 埃式筛法的思路
+        for (ll i = 1; i <= n; i ++) {
+            for (ll j = i; i * j <= n; j ++) {
+                dv_mi[i * j].push_back(i);
+                if (i - j) dv_mx[i * j].push_back(j);
+            }
+        }
+    }
+    void get_loop(ll& len, ll l, ll r) {
+        ll tn = r - l + 1;
+        auto& dmi = dv_mi[tn];
+        auto& dmx = dv_mx[tn];
+        for (auto it = dmi.begin(); it != dmi.end(); it ++) {
+            if (get(l, r - *it) == get(l + *it, r)) { len = *it; return; }
+        }
+        for (auto it = dmx.rbegin(); it != dmx.rend(); it ++) {
+            if (get(l, r - *it) == get(l + *it, r)) { len = *it; return; }
+        }
+        // return std::string(s.begin() + 1, s.begin() + 1 + len);
     }
 }
 ```
