字符串知识汇总.md

--- a/docs/板子/字符串知识汇总.md
+++ b/docs/板子/字符串知识汇总.md
@@ -222,7 +222,7 @@ namespace lrq {
 }
 ```
 
-## 字符串哈希 - 枚举因子数求子串的最小循环节
+## [字符串哈希 - 枚举因子数求子串的最小循环节](https://www.luogu.com.cn/problem/P3538)
 
 ```cpp
 namespace lrq {
