字符串知识汇总.md

--- a/docs/板子/字符串知识汇总.md
+++ b/docs/板子/字符串知识汇总.md
@@ -226,26 +226,26 @@ namespace lrq {
 
 ```cpp
 namespace lrq {
-    const ll N = 2e6;
-    ll R1 = 31, R2 = 131313;
-    ll M1 = 1e9 + 7, M2 = 1e9 + 9;
-    ll H1[N], H2[N]; // 字符串的哈希值
-    ll P1[N], P2[N]; // 进制次方
-    std::string s;   // 字符串从 1 开始
-    ll n;            // 字符串的长度
+    const ll N = 1e6 + 10;
+    typedef unsigned long long ull;
+    ull R1 = 31, R2 = 131;
+    ull H1[N], H2[N];
+    ull P1[N], P2[N];
+    std::string s;
+    ll n = N - 1;
     void init() {
         P1[0] = P2[0] = 1;
         for (ll i = 1; i <= n; i ++) {
-            P1[i] = P1[i - 1] * R1 % M1;
-            P2[i] = P2[i - 1] * R2 % M2;
-            H1[i] = (H1[i - 1] * R1 % M1 + s[i]) % M1;
-            H2[i] = (H2[i - 1] * R2 % M2 + s[i]) % M2;
+            P1[i] = P1[i - 1] * R1;
+            P2[i] = P2[i - 1] * R2;
+            H1[i] = H1[i - 1] * R1 + s[i];
+            H2[i] = H2[i - 1] * R2 + s[i];
         }
     }
-    std::pair<ll, ll> get(ll l, ll r) {
+    std::pair<ull, ull> get(ll l, ll r) {
         return {
-            ((H1[r] - H1[l - 1] * P1[r - l + 1] % M1) % M1 + M1) % M1,
-            ((H2[r] - H2[l - 1] * P2[r - l + 1] % M2) % M2 + M2) % M2
+            H1[r] - H1[l - 1] * P1[r - l + 1],
+            H2[r] - H2[l - 1] * P2[r - l + 1]
         };
     }
     // 旧版本，暴力枚举长度为 len 的各部分是否相同来判断循环节
@@ -272,34 +272,89 @@ namespace lrq {
         if (len > (n >> 1)) len = n;
         return std::string(s.begin() + 1, s.begin() + 1 + len);
     }
-    // 寻找子串 s[l~j] 的循环节
-    typedef std::vector<ll> vll;
-    vll dv_mi[N];
-    vll dv_mx[N];
-    // 预处理出 1 ~ n 内每一个数的因子数
-    // 时间复杂度: n/1 + n/2 + n/3 + ··· + n/n <= nlog(n)
-    // 1e6 内最大因子数个数：240
-    // 平均因子数个数：13
-    void init_dv() {
-        // 埃式筛法的思路
-        for (ll i = 1; i <= n; i ++) {
-            for (ll j = i; i * j <= n; j ++) {
-                dv_mi[i * j].push_back(i);
-                if (i - j) dv_mx[i * j].push_back(j);
+    // 枚举因数求子串的最小循环节
+    ll prs[N], prs_on[N], cnt; // euler 筛质数
+    ll mi_pdv[N]; // 记录 i 的最小质因子
+    void get_primes() {
+        cnt = 0;
+        mi_pdv[1] = 1;
+        for (ll i = 2; i <= n; i ++) {
+            if (prs_on[i] == 0) prs[++ cnt] = i, mi_pdv[i] = i;
+            for (ll j = 1; prs[j] * i <= n; j ++) {
+                prs_on[prs[j] * i] = 1;
+                mi_pdv[prs[j] * i] = prs[j];
+                if (i % prs[j] == 0) break;
             }
         }
     }
+    // // 获取 n 的所有质因数及出现的次数，n <= 1e12
+    // // 时间复杂度：n * sqrt(n)
+    // std::vector<std::array<ll, 2>> get_pdvs(ll n) {
+    //     // 比 sqrt(n) 还要大的质因数只可能存在一个
+    //     std::vector<std::array<ll, 2>> res;
+    //     ll sqr = std::sqrt(n);
+    //     for (ll i = 1; prs[i] <= sqr; i ++) {
+    //         if (n % prs[i]) continue;
+    //         ll x = prs[i], y = 0;
+    //         while (n % prs[i] == 0) {
+    //             y ++; n /= prs[i];
+    //         }
+    //         std::cout << x << ' ' << y << '\n';
+    //     }
+    //     if (n > 1) res.push_back({n, 1});
+    //     return res;
+    // }
+    // 获取 n 的所有质因数及出现的次数，n <= 1e6
+    // 时间复杂度：nlog(n)
+    ll ta[N], cta;
+    std::vector<std::pair<ll, ll>> get_pdvs(ll n) {
+        cta = 0;
+        std::vector<std::pair<ll, ll>> res;
+        for (ll i = n; i > 1; i /= mi_pdv[i]) {
+            ta[++ cta] = mi_pdv[i];
+        }
+        res.push_back({ta[1], 1});
+        for (ll i = 2; i <= cta; i ++) {
+            if (ta[i] == res.back().first) res.back().second ++;
+            else res.push_back({ta[i], 1});
+        }
+        return res;
+    }
+    // 获取 n 的所有因数，可以通过枚举因数来获取最小循环节长度
+    std::vector<ll> dv_a[N], dv_b[N];
+    void init_dv() {
+        for (ll i = 1; i <= n; i ++) {
+            for (ll j = i; i * j <= n; j ++) {
+                dv_a[i * j].push_back(i);
+                if (i - j) dv_b[i * j].push_back(j);
+            }
+        }
+    }
+    std::vector<ll> get_dvs(ll n) {
+        std::vector<ll> res;
+        res.insert(res.end(), dv_a[n].begin(), dv_a[n].end());
+        res.insert(res.end(), dv_b[n].rbegin(), dv_b[n].rend());
+        return res;
+    }
+    // 若最小循环节长度为 x, 则循环的次数为：y = n / x
+    // 循环次数 y 的质因子，一定在 n 的质因子内，并且令 y 的质因子为 t，则
+    // n/t 一样构成循环节，因为 x | n/t，n/t | n
+    // 例如：abcabcabcabc, 质因子为：2, 3
+    // 最小循环节为：3, 循环次数为 4
+    // 那么 4 的质因子 2 作为循环次数时，循环节长度为 6 也是循环节
+    // 罗列出 4 的所有质因子然后压缩倍数就可以得到最小循环节长度
     void get_loop(ll& len, ll l, ll r) {
-        ll tn = r - l + 1;
-        auto& dmi = dv_mi[tn];
-        auto& dmx = dv_mx[tn];
-        for (auto it = dmi.begin(); it != dmi.end(); it ++) {
-            if (get(l, r - *it) == get(l + *it, r)) { len = *it; return; }
+        if (get(l, r - 1) == get(l + 1, r)) { len = 1; return; }
+        cta = 0;
+        ll n = r - l + 1;
+        len = n;
+        // 从小到大获取质因子
+        for (ll i = n; i - 1; i /= mi_pdv[i]) ta[++ cta] = mi_pdv[i];
+        for (ll i = 1; i <= cta; i ++) {
+            if (get(l, r - len / ta[i]) == get(l + len / ta[i], r)) {
+                len /= ta[i];
+            }
         }
-        for (auto it = dmx.rbegin(); it != dmx.rend(); it ++) {
-            if (get(l, r - *it) == get(l + *it, r)) { len = *it; return; }
-        }
-        // return std::string(s.begin() + 1, s.begin() + 1 + len);
     }
 }
 ```
