字符串知识汇总.md

--- a/docs/板子/字符串知识汇总.md
+++ b/docs/板子/字符串知识汇总.md
@@ -7,6 +7,7 @@
   - [字符串哈希 - 枚举因子数求子串的最小循环节](#字符串哈希---枚举因子数求子串的最小循环节)
   - [Manacher 求最大回文子串](#manacher-求最大回文子串)
   - [KMP](#kmp)
+  - [扩展 exkmp](#扩展-exkmp)
 
 ## [字符串哈希](https://www.acwing.com/problem/content/843/)
 
@@ -493,5 +494,55 @@ namespace lrq {
         ll t = n - ne[n];
         return t > n / 2 ? n : t;
     }
+}
+```
+
+## [扩展 exkmp](https://www.luogu.com.cn/problem/P5410)
+
+```cpp
+namespace lrq {
+	typedef long long ll;
+	const ll N = 2e7 + 10;
+	char P[N], S[N];
+	ll n, m;
+	ll ne[N], ex[N];
+	void get_ne() {
+		ne[1] = n; ne[2] = 0;
+		for (ll i = 1, j = 2; j <= n && P[i] == P[j]; i ++, j ++, ne[2] ++);
+		ll st = 2, len = ne[2];
+		for (ll i = 3; i <= n; i ++) {
+			// P[j:ne[j]] = P[st:ne[j]]
+			// >> P[i:ne[j]-1] = P[st:ne[j]-1]
+			// >> 若 ne[st] < ne[j] - 1
+			// >>>> P[i:ne[st]] = P[st:ne[st]]
+			// >> 若 ne[st] >= ne[j] - 1
+			// >>>> P[i:ne[j]-1] = P[st:ne[j]-1] 并且需要暴力扩展
+			// >>>> 若扩展后的 ne[i] > ne[st], st = i, len = ne[i]
+			if (len < ne[i - 1] - 1) ne[i] = len;
+			else {
+				ne[i] = std::max(ne[i - 1] - 1, 0ll);
+				for (ll p = i + ne[i], q = 1 + ne[i]; p <= n && P[p] == P[q]; p ++, q ++, ne[i] ++);
+				if (ne[i] > len) st = i, len = ne[i];
+			}
+		}
+	}
+	void get_ex() {
+		ll st = 0, ed = 0;
+		for (ll i = 1; i <= m; i ++) {
+			if (i > ed) {
+				ex[i] = 0;
+				for (ll p = i, q = 1; p <= m && q <= n && S[p] == P[q]; p ++, q ++, ex[i] ++);
+				st = i, ed = i + ex[i] - 1;
+			}
+			else {
+				if (i + ne[i - st + 1] - 1 < ed) ex[i] = ne[i - st + 1];
+				else {
+					ex[i] = ed - i + 1;
+					for (ll p = i + ex[i], q = 1 + ex[i]; p <= m && q <= n && S[p] == P[q]; p ++, q ++, ex[i] ++);
+					st = i; ed = i + ex[i] - 1;
+				}
+			}
+		}
+	}
 }
 ```
