字符串知识汇总.md

--- a/docs/板子/字符串知识汇总.md
+++ b/docs/板子/字符串知识汇总.md
@@ -499,6 +499,13 @@ namespace lrq {
 
 ## [扩展 exkmp](https://www.luogu.com.cn/problem/P5410)
 
+令 $ne[i]$ 代表 $S[1 \sim n]$ 与子串 $S[i \sim n]$ 的最大公共长度
+
+![](./img/扩展kmp1.png)
+
+假设已知道：$S[1 \sim n]$ 与子串 $S[i \sim n]$ 的最大公共长度为 $ne[i]$
+
+
 ```cpp
 namespace lrq {
 	typedef long long ll;
