--- a/docs/每日英语/默写本.md
+++ b/docs/每日英语/默写本.md
@@ -76,3 +76,26 @@ It's none of your business, the young man said rudely.
 This is a private conversation.
 ```
 
+```
+I have just received a letter from my brother, Tim.
+
+He is in Australia.
+
+He has been there for six months
+
+He is an engineer.
+
+He is working for a big firm and he has already visited a great number of different places in Australia.
+
+He has just bought an Australian car and he has gone to Alice Springs, a small town in the centre of Australia.
+
+He will soon visit Darwin.
+
+From there, he will fly to Perth.
+
+He has never been abroad before, so he is finding this trip very interesting.
+```
+
+```
+
+```
