--- a/docs/Linux/换源.md
+++ b/docs/Linux/换源.md
@@ -10,19 +10,33 @@ vim /etc/apt/sources.list
 ```
 
 ```bash
-# 换阿里源 23.04 为例
+# 换阿里源 22.04 为例
 
-# aliyun
-deb http://mirrors.aliyun.com/ubuntu/ lunar main restricted universe multiverse
-deb-src http://mirrors.aliyun.com/ubuntu/ lunar main restricted universe multiverse
-deb http://mirrors.aliyun.com/ubuntu/ lunar-security main restricted universe multiverse
-deb-src http://mirrors.aliyun.com/ubuntu/ lunar-security main restricted universe multiverse
-deb http://mirrors.aliyun.com/ubuntu/ lunar-updates main restricted universe multiverse
-deb-src http://mirrors.aliyun.com/ubuntu/ lunar-updates main restricted universe multiverse
-deb http://mirrors.aliyun.com/ubuntu/ lunar-proposed main restricted universe multiverse
-deb-src http://mirrors.aliyun.com/ubuntu/ lunar-proposed main restricted universe multiverse
-deb http://mirrors.aliyun.com/ubuntu/ lunar-backports main restricted universe multiverse
-deb-src http://mirrors.aliyun.com/ubuntu/ lunar-backports main restricted universe multiverse
+deb http://mirrors.aliyun.com/ubuntu/ jammy main restricted universe multiverse
+deb-src http://mirrors.aliyun.com/ubuntu/ jammy main restricted universe multiverse
+deb http://mirrors.aliyun.com/ubuntu/ jammy-security main restricted universe multiverse
+deb-src http://mirrors.aliyun.com/ubuntu/ jammy-security main restricted universe multiverse
+deb http://mirrors.aliyun.com/ubuntu/ jammy-updates main restricted universe multiverse
+deb-src http://mirrors.aliyun.com/ubuntu/ jammy-updates main restricted universe multiverse
+deb http://mirrors.aliyun.com/ubuntu/ jammy-proposed main restricted universe multiverse
+deb-src http://mirrors.aliyun.com/ubuntu/ jammy-proposed main restricted universe multiverse
+deb http://mirrors.aliyun.com/ubuntu/ jammy-backports main restricted universe multiverse
+deb-src http://mirrors.aliyun.com/ubuntu/ jammy-backports main restricted universe multiverse
+```
+
+或者一键设置：
+
+```bash
+sudo bash -c "cat << EOF > /etc/apt/sources.list && apt update 
+deb https://mirrors.tuna.tsinghua.edu.cn/ubuntu/ jammy main restricted universe multiverse
+# deb-src https://mirrors.tuna.tsinghua.edu.cn/ubuntu/ jammy main restricted universe multiverse
+deb https://mirrors.tuna.tsinghua.edu.cn/ubuntu/ jammy-updates main restricted universe multiverse
+# deb-src https://mirrors.tuna.tsinghua.edu.cn/ubuntu/ jammy-updates main restricted universe multiverse
+deb https://mirrors.tuna.tsinghua.edu.cn/ubuntu/ jammy-backports main restricted universe multiverse
+# deb-src https://mirrors.tuna.tsinghua.edu.cn/ubuntu/ jammy-backports main restricted universe multiverse
+deb https://mirrors.tuna.tsinghua.edu.cn/ubuntu/ jammy-security main restricted universe multiverse
+# deb-src https://mirrors.tuna.tsinghua.edu.cn/ubuntu/ jammy-security main restricted universe multiverse
+EOF"
 ```
 
 ```bash
