--- a/docs/每日英语/草稿本.md
+++ b/docs/每日英语/草稿本.md
@@ -1,46 +1,42 @@
-import sys
-from os import system
-import pymysql
+# 草稿
 
-db = pymysql.connect(
-    host = "localhost",
-    port = 3306,
-    user = "huaxvubuntu",
-    password = "huaxvubuntu",
-    database = "learn_db"
-)
+## 八
 
-cr = db.cursor()
+股票上市：
 
-def today():
-    ls = set()
-    for i in [0, 1, 2, 4, 8, 16, 32]:
-        cr.execute(f"select name from learn_tb where datediff(curdate(), date_create)=%s" % (i, ))
-        temp = cr.fetchall()
-        for _ in temp:
-            ls.insert(_)
-    return list(ls)
+```txt
+市场分析：智能家居市场规模在近年来持续增长，预计到2025年将达到1.5万亿美元。主要驱动因素包括消费者对智能生活的需求、物联网技术的发展、政府的支持和合作伙伴的拓展。
 
-def all():
-    ls = set()
-    cr.execute("select name from learn_tb;")
-    for i in cr.fetchall():
-        ls.insert(i)
-    return ls
+竞争分析：智能家居市场竞争激烈，主要竞争者包括华为、小米、苹果、谷歌、亚马逊等。我们的优势在于提供高品质、低成本、易使用的智能家居产品和服务，以及打造开放的生态平台，与各类合作伙伴共同创造价值。
 
-def insert(s):
-    cr.execute(f'insert into learn_tb (name, date_create) values ("%s", curdate());')
-    
+产品与服务：我们的产品包括智能中控屏、智能门锁、智能灯光、智能空调、智能音响等，以及相应的软件和应用。我们的服务包括一站式的智能家居设计安装、调试、维保等，以及提供专业的工程顾问和客户支持。
 
-# python3 -u learn.py
-if __name__ == "__main__":
-    args = list(sys.argv)[1:]
-    s = ""
-    c = args[0]
-    for i in args[1:]:
-        s += i + " "
-    s = s[:-1]
-    if c == "insert":
-        insert(s)
-    elif c == "all":
-        all()
+营销策略：我们的营销策略包括以下几点：
+    通过线上线下渠道宣传推广我们的品牌和产品，提高知名度和信誉度。
+    通过社交媒体、口碑营销、活动促销等方式吸引和留住客户，增加用户粘性和忠诚度。
+    通过与地产商、酒店商、办公商等行业合作，拓展商用市场，提高市场占有率。
+    通过与其他智能家居厂商、内容提供商、服务提供商等合作，构建开放的生态系统，丰富产品和服务的功能和价值。
+    只要价格足够低廉实惠，培养巩固产品的良好口碑，面对消费者服务态度友好，自然而然的就会得到消费者们的互相推销与介绍
+```
+
+股权转让：
+
+```txt
+投资者可以通过股权转让的方式收回投资。股权转让是指公司股东依法将自己的股份让渡给他人，使他人成为公司股东的情形。我们将根据公司的发展情况和市场情况，在合适的时间和价格进行股权转让。
+```
+
+股权回购：
+
+```txt
+股权回购是指公司回购自己已发行的股份，以减少公司的股本或用于员工持股计划等目的。我们将根据公司的财务状况和股东利益，在合适的时间和价格进行股权回购。
+```
+
+利润分红：
+
+```txt
+投资者可以通过公司利润分红达到收回投资的目的。利润分红是指公司根据盈利情况，按照一定比例向股东分配利润的行为。我们将根据公司的经营状况和发展需要，在合适的时间和比例进行利润分红。
+```
+
+## 九
+
+
