创建新用户.md

--- a/docs/Linux/创建新用户.md
+++ b/docs/Linux/创建新用户.md
@@ -1,1 +1,18 @@
 # 创建新用户
+
+```bash
+# 进入管理员模式
+sudo su
+
+# 创建新用户，会提示你输入密码、手机号等
+adduser huaxvtemp
+
+# 设置新用户权限，添加 sudo 权限
+usermod -aG sudo huaxvtemp
+
+# 为新用户创建一个 home 目录
+mkhomedir_helper huaxvtemp
+
+# 切换新用户
+su - huaxvtemp
+```
