--- a/docs/板子/代码壳.md
+++ b/docs/板子/代码壳.md
@@ -1,5 +1,37 @@
 # 代码壳
 
 ```cpp
+#include <bits/stdc++.h>
+typedef long long var;
+typedef __int128 hh;
+
+namespace {
+
+
+
+void solve() {
+    std::cout << RAND_MAX << '\n';      // 2147483647
+    std::cout << sizeof(hh) << '\n';    // 16
+    std::cout << sizeof(var) << '\n';   // 8
+    std::cout << sizeof(int) << '\n';   // 4
+    auto dfs = [&](auto&& f, auto x) -> void {
+        if (x == 0) return;
+        std::cout << x << '\n';
+        f(f, x - 1);
+    };
+    dfs(dfs, 100);
+}
+
+}
+
+// g++ -w -std=c++20 -O2 Main.cpp -o Main && ./Main
+int main() {
+    std::ios::sync_with_stdio(0);
+    std::cin.tie(0); std::cout.tie(0);
+    srand(time(0));
+    //int t; std::cin >> t; while (t --)
+    solve();
+    return 0;
+}
 
 ```
