--- a/docs/Linux/编译环境.md
+++ b/docs/Linux/编译环境.md
@@ -7,6 +7,7 @@ sudo apt install build-essential manpages-dev software-properties-common gcc g++
 
 sudo apt install openjdk-17-jre-headless
 sudo apt-get install default-jdk
+sudo apt-get install python3-pip
 ```
 
 添加环境变量：
