高频英语单词.md

--- a/docs/每日英语/高频英语单词.md
+++ b/docs/每日英语/高频英语单词.md
@@ -1,2 +1,91 @@
 # 高频英语单词
 
+## availabel
+
+```
+availabel   可用的
+
+This is the only room available.
+这是唯一可用的房间
+```
+
+## resident
+
+```
+resident    定居的、居民
+
+Local resident groups have united in opposition to the plan.
+当地居民团体已联合起来反对这项计划
+```
+
+## direction
+
+```
+direction   方向、指导
+
+Which direction are you facing ?
+你面朝哪个方向
+
+She glanced in his direction.
+她朝他的那个方向瞥了过去
+```
+
+## sheet
+
+```
+sheet   表格、床单
+
+This sheet has a tear in it.
+这条床单上有个破洞
+
+He cavered up the body with a sheet.
+他用一条步单把尸体盖上了
+```
+
+## correspond
+
+```
+correspond  符合、联系
+
+Your account and hers do not correspond.
+你说的情况和她说的不相符
+
+Your account of events does not correspond with hers.
+你对事情的陈述与她说的不相符
+```
+
+## advance
+
+```
+advance     促进、提前、进步
+
+The general gave the order to advance.
+将军下令前进
+
+We need advance notice of the numbers involved.
+我们需要事先得知涉及的数量
+```
+
+## contribute
+
+```
+contribute  捐献、贡献
+
+Do you want to contribute?
+你想要捐献吗
+
+How do you plan to contribute?
+你打算如何做出贡献呢？
+
+The tools quickly reach the limits of what they can contribute.
+这些工具很快就达到了它们所能贡献的极限
+```
+
+## identify
+
+```
+identify    鉴定、认出、发现
+
+First of all we must identify the problem areas.
+首先我们必须找出问题所在
+```
