--- a/docs/Linux/复习脚本.md
+++ b/docs/Linux/复习脚本.md
@@ -29,83 +29,147 @@ int main(int n, char* ss[]) {
 ## learn.py
 
 ```py
-import sys
 from os import system
-import pymysql
+import sys
+from datetime import date
 
-db = pymysql.connect(
-    host = "localhost",
-    port = 3306,
-    user = "huaxvubuntu",
-    password = "huaxvubuntu",
-    database = "learn_db"
-)
 
-cr = db.cursor()
+# 获取日期对象转成的字符串
+def get_date_string(day):
+    return day.__format__("%Y %m %d")
 
-def today():
-    ls = []
-    for i in [0, 1, 2, 4, 8, 16, 32]:
-        cr.execute(f"select name from learn_tb where datediff(curdate(), date_create)=%s order by id desc;" % (i, ))
-        temp = cr.fetchall()
-        for _ in temp:
-            ls.append(_)
-    return ls
 
-def all():
-    ls = []
-    cr.execute("select name from learn_tb order by id;")
-    for i in cr.fetchall():
-        ls.append(i)
-    return ls
+# 将字符串列表转成日期对象
+def get_date_object(ls_day):
+    return date(*[int(i) for i in ls_day])
 
-def insert(s):
-    try:
-        cr.execute(f'insert into learn_tb (name, date_create) values ("%s", curdate());' % (s, ))
-        db.commit()
-        print("insert success")
-    except:
-        db.rollback()
-        print("insert error")
 
-def error_exit():
-    cr.close()
-    db.close()
-    exit(0)
+# 获取到达 0001 年 01 月 01 日的相隔天数
+def get_days_from_origin(day):
+    return day.toordinal()
 
-# python3 -u learn.py
-if __name__ == "__main__":
-    args = list(sys.argv)[1:]
-    if len(args) == 0:
-        error_exit()
-    s = ""
-    c = args[0]
-    for i in args[1:]:
-        s += i + " "
-    if s:
-        s = s[:-1]
-    if c == "insert":
-        if len(s) == 0:
-            error_exit()
-        insert(s)
-    elif c == "all":
-        id = 1
-        print("all you have learnt: ")
-        for i in all():
-            print('\t▫', id, '\t', *i)
-            id += 1
-    elif c == "today":
-        id = 1
-        print("today you should learn: ")
-        for i in today():
-            print('\t▫', id, '\t', *i)
-            id += 1
-    elif c == "help":
-        print("learn all:               list the temp that you have learnt")
-        print("learn today:             list the temp that you should learn today")
-        print("learn insert string:     insert the new temp thai you should review")
+
+# 获取今天的日期对象
+def get_today():
+    return date.today()
+
+
+# 将字符串切割成一个一个的单词
+def split_string(s):
+    ans = []
+    res = ''
+    empty = [ '\n', ' ', '\f', '\t', '\b', '\r' ]
+    for i in s:
+        if i in empty:
+            if res:
+                ans.append(res)
+                res = ''
+        else:
+            res += i
+    if res:
+        ans.append(res)
+    return ans
+
+
+# 将字符串转成 标题+日期对象
+def get_info_and_date(s):
+    ls = split_string(s)
+    return [ls[0], get_date_object(ls[1:])]
+
+
+dir = '/home/huaxvubuntu/huaxv/.tools'
+path = '/home/huaxvubuntu/huaxv/.tools/learn.txt'
+
+
+def init():
+    system('mkdir -p ' + dir)
+    run = '''
+        if [ ! -f /home/huaxvubuntu/huaxv/.tools/learn.txt ]; then
+            touch /home/huaxvubuntu/huaxv/.tools/learn.txt;
+        fi;
+    '''
+    system(run)
+
+
+def read():
+    ans = []
+    with open(path, encoding="utf-8", mode='r') as f:
+        for line in f:
+            ans.append(get_info_and_date(line))
+    return ans
+
+
+def write(ls_info):
+    with open(path, encoding="utf-8", mode='w') as f:
+        ans = ""
+        for i, j in ls_info:
+            ans += i + ' ' + get_date_string(j) + '\n'
+        f.write(ans)
         
-    error_exit()
+    
+def insert(info):
+    ls = read()
+    for i, j in ls:
+        if i == info:
+            print(info + " has been exist, do you still want to insert? (y or n) ", end='')
+            s = input()
+            if s == 'y' or s == 'Y':
+                ls.insert(0, [info, get_today()])
+                write(ls)
+            return
+    ls.insert(0, [info, get_today()])
+    write(ls)
+
+
+def show_all():
+    ls = read()
+    ls.reverse()
+    cur = 0
+    for i, j in ls:
+        cur += 1
+        print("\t· " + str(cur) + '\t' + i + '\t\t' + get_date_string(j).replace(' ', '-'))
+
+
+def show_today_should_learn():
+    ls = read()
+    distance = { 0, 1, 2, 4, 8, 16, 32 }
+    cur = 0
+    for i, j in ls:
+        if get_days_from_origin(get_today()) - get_days_from_origin(j) in distance:
+            cur += 1
+            print("\t· " + str(cur) + '\t' + i + '\t\t' + get_date_string(j).replace(' ', '-'))
+
+
+def main():
+    init()
+    args = sys.argv[1:]
+    if len(args) == 0:
+        print('learn -h:         get help for the learn exe')
+        print('learn -i item:    insert the item you should learn next time')
+        print('learn -a:         show all items you have learnt')
+        print('learn -t:         show the items you should learn today')
+    elif args[0] == '-h':
+        print('learn -i item:    insert the item you should learn next time')
+        print('learn -a:         show all items you have learnt')
+        print('learn -t:         show the items you should learn today')
+    elif args[0] == '-t':
+        show_today_should_learn()
+    elif args[0] == '-a':
+        show_all()
+    elif args[0] == '-i':
+        if len(args) <= 1:
+            pass
+        res = ""
+        on = False
+        for i in args[1:]:
+            if on:
+                res += ' '
+            on = True
+            res += i
+        insert(res)
+        
+if __name__ == '__main__':
+    main()
 ```
 
 ## learn.sh
@@ -137,7 +201,9 @@ fi;
 
 python3 -u learn.py $*;
 
-rm learn.py
+if [ ! `pwd` == $dn ]; then
+    rm learn.py;
+fi;
 ```
 
 
