--- a/docs/每日英语/高频英语单词.md
+++ b/docs/每日英语/高频英语单词.md
@@ -89,3 +89,40 @@ identify    鉴定、认出、发现
 First of all we must identify the problem areas.
 首先我们必须找出问题所在
 ```
+
+## appeal
+
+```
+appeal      呼吁、鉴定
+
+We intend to appeal the verdict.
+我们打算对此裁决提出申诉
+
+verdict     裁决
+```
+
+## feature
+
+```
+feature     特点
+
+His eyes are his most notable feature.
+他的双眼是他最明显的特征
+
+notable     最明显的
+```
+
+## individual
+
+```
+individual  个人的
+
+The author stresses the uniqueness of the individual.
+这位作者强调个人的独特性
+```
+
+## academic
+
+```
+academic    
+```
