--- a/docs/板子/代码壳.md
+++ b/docs/板子/代码壳.md
@@ -3,34 +3,41 @@
 ```cpp
 #include <bits/stdc++.h>
 typedef long long var;
-typedef __int128 hh;
+typedef __int128 vhh;
 
 namespace {
 
 
 
 void solve() {
-    std::cout << RAND_MAX << '\n';      // 2147483647
-    std::cout << sizeof(hh) << '\n';    // 16
+    std::cout << sizeof(vhh) << '\n';   // 16
     std::cout << sizeof(var) << '\n';   // 8
     std::cout << sizeof(int) << '\n';   // 4
-    auto dfs = [&](auto&& f, auto x) -> void {
-        if (x == 0) return;
-        std::cout << x << '\n';
-        f(f, x - 1);
+    std::cout << RAND_MAX << '\n';      // 2147483647
+    auto dfs = [&](auto&& f, auto&& x) -> void {
+        if (x >= 0) {
+            std::cout << x << '\n';
+            f(f, x - 1);
+        }
     };
     dfs(dfs, 100);
 }
 
 }
 
-// g++ -w -std=c++20 -O2 Main.cpp -o Main && ./Main
+// g++ -std=c++20 Main.cpp -o Main
 int main() {
     std::ios::sync_with_stdio(0);
     std::cin.tie(0); std::cout.tie(0);
-    srand(time(0));
-    //int t; std::cin >> t; while (t --)
-    solve();
+    std::random_device rd;
+    std::mt19937 mt(rd());
+    srand(mt());
+    int t = 1; 
+    // std::cin >> t;
+    for (int i = 1; i <= t; i ++) {
+        // std::cout << "Case #1: ";
+        solve();
+    }
     return 0;
 }
 
