--- a/docs/Linux/复习脚本.md
+++ b/docs/Linux/复习脚本.md
@@ -10,9 +10,8 @@
 typedef long long var;
 typedef __int128 hh;
 
-std::string s = "learn.sh";
+// std::string s = "learn.sh";
 
-// g++ -std=c++20 learn.cpp -o learn && learn
 int main(int n, char* ss[]) {
     {
         var on = 1;
@@ -30,8 +29,10 @@ int main(int n, char* ss[]) {
 
 ```py
 from os import system
+import os
 import sys
 from datetime import date
+from os import path
 
 
 # 获取日期对象转成的字符串
@@ -77,15 +78,17 @@ def get_info_and_date(s):
     return [ls[0], get_date_object(ls[1:])]
 
 
-dir = '/home/huaxvubuntu/huaxv/.tools'
-path = '/home/huaxvubuntu/huaxv/.tools/learn.txt'
-
+# dir = os.getcwd()
+cmd = os.popen('readlink -f ~/huaxv/.lrq_tools')
+dir = cmd.readline().split()[0]
+cmd.close()
+path = dir + '/learn.txt'
 
 def init():
     system('mkdir -p ' + dir)
-    run = '''
-        if [ ! -f /home/huaxvubuntu/huaxv/.tools/learn.txt ]; then
-            touch /home/huaxvubuntu/huaxv/.tools/learn.txt;
+    run = f'''
+        if [ ! -f {path} ]; then
+            touch {path};
         fi;
     '''
     system(run)
@@ -170,40 +173,7 @@ def main():
         
 if __name__ == '__main__':
     main()
-```
-
-## learn.sh
-
-```bash
-#!/bin/bash
-
-dn="$0"
-# echo $dn
-dn=${dn:0:`expr ${#dn}-9`}
-# echo $dn
-
-# pwd 
-# echo $dn
-# if [ `pwd` == $dn ]; then 
-#     echo hello the same at hear
-# else echo hello the different at hear
-# fi;
-
-if [ -e "learn.py" ] && [ ! `pwd` == $dn ]; then
-    # echo hello world
-    rm learn.py;
-    cp "${dn}/learn.py" ./learn.py;
-fi;
-
-if [ ! -e "learn.py" ]; then
-    cp "${dn}/learn.py" ./learn.py;
-fi;
-
-python3 -u learn.py $*;
-
-if [ ! `pwd` == $dn ]; then
-    rm learn.py;
-fi;
+    
 ```
 
 
