--- a/docs/Linux/编译环境.md
+++ b/docs/Linux/编译环境.md
@@ -10,6 +10,16 @@ sudo apt-get install default-jdk
 sudo apt-get install python3-pip
 ```
 
+安装 gcc11
+
+```bash
+sudo apt install software-properties-common
+sudo add-apt-repository ppa:ubuntu-toolchain-r/test
+sudo apt update
+sudo apt install gcc-11 g++-11
+sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-11 60 --slave /usr/bin/g++ g++ /usr/bin/g++-11
+```
+
 添加环境变量：
 
 ```bash
