--- a/docs/每日英语/草稿本.md
+++ b/docs/每日英语/草稿本.md
@@ -3,15 +3,7 @@
 ```
 oj.cpp      处理和分析用户输入的命令
     
-cp          编译单个程序文件   
-
 cps         多线程编译多个文件
-
-get_words   将一行字符串切割成一个一个单词的形式
-
-check       比较两个字符串在判题逻辑上是否相同
-
-get_content 获取某文本的内容
 
 equal       判断两个文本文件的内容在判题逻辑上是否相同
 
@@ -85,4 +77,32 @@ def deal_file(name)
 def is_right(type_f)
 
 def main()
+```
+
+```
+主板 + cpu:    b550a吹雪 + 5700x       2246元
+
+
+机箱:          长城隐刃h513             259元
+
+
+机箱风扇:       利民tl-c12c             199元
+
+
+内存条:         金士顿fury16*2+8*2      0元
+
+
+显卡:           rx580                  0元
+
+
+电源:           酷冷至尊g800            475元
+
+
+固态:           致态tipro1TB           499元
+
+
+散热器:         利民pa120              142元
+
+
+总计:   3820元
 ```
