--- a/docs/每日英语/高频单词.md
+++ b/docs/每日英语/高频单词.md
@@ -130,5 +130,27 @@ prevent
 species
 物种、种类
 
+colleague
+同事、同僚
 
+force
+力量、武力、军队、促使、强迫
+
+income
+收入、收益、所得
+
+prove
+证明、验证、显示
+
+reward
+报酬、报答、酬谢、奖励、奖赏
+
+contribute
+贡献、出力、投稿、捐献
+
+effective
+有效的、起作用的、实际的
+
+evidence
+证据、证明、迹象、明显
 ```
