--- a/docs/每日英语/高频单词.md
+++ b/docs/每日英语/高频单词.md
@@ -153,4 +153,66 @@ effective
 
 evidence
 证据、证明、迹象、明显
+
+trend
+趋势、倾向、伸向
+
+amount 
+数量、总数、总计、等于
+
+approach
+走进、处理、方法、接近
+
+field
+领域、旷野、战场、运动场
+
+performance
+表演、执行、表现
+
+pressure
+压力、压迫、迫使、密封
+
+shift
+转移、改变、转向
+
+emission
+发射、散发、喷射、发行
+
+account
+账户、解释、账目、描述、认为
+
+track
+追踪、通过、轨道、踪迹、小道
+
+claim
+宣称、要求、索取
+
+department
+部门
+
+material
+物质的、重要的、材料
+
+peer
+同等地位的人、同龄人、贵族、凝视
+
+period
+周期、期间、时期
+
+role
+角色、任务
+
+wage
+工资、报酬
+
+launch
+发射、发起、发动
+
+relate
+叙述、符合、设计、认同
+
+poverty
+贫困、困难、缺少
+
+
 ```
