--- a/docs/每日英语/高频单词.md
+++ b/docs/每日英语/高频单词.md
@@ -214,5 +214,173 @@ relate
 poverty
 贫困、困难、缺少
 
+variety
+多样、种类、多样化
+
+bacteria
+细菌
+
+race
+种族、比赛
+
+attract
+吸引、引起
+
+drop
+推动、宣扬、下降，终止
+
+current
+现在的、流通的、通用的
+
+influence
+影响
+
+professional
+专业的，职业的，专业人员
+
+talent
+才能、天才
+
+advantage
+优势、利益、有利条件
+
+boost 
+促进、增加、推动
+
+deal
+发放、买卖、应对
+
+expand
+扩张、详述、发展、张开
+
+fear
+害怕、敬畏、担心
+
+monitor
+监视器、显示屏
+
+realize
+实现、认识到、了解
+
+imagine
+想象
+
+intelligence
+智力、智慧
+
+region
+地区、范围、部位
+
+source
+来源、水源、原始资料
+
+suffer
+遭受、忍受、经历
+
+available
+可获得的、有空的
+
+concept
+观念、概念
+
+contact
+接触、联系
+
+cultural
+文化的、教养的
+
+director
+主任、主管、导演
+
+disaster
+灾难、不幸
+
+fix
+固定、维修、安排、确定
+
+present
+现在的、出席的、礼物、目前
+
+promote
+促进、提升、推销
+
+damage
+损害、损毁
+
+deliver
+发表、推送、交付
+
+genetic
+遗传的、基因的、起源的
+
+interview
+接见、采访、面试
+
+investment
+投资、投入
+
+supply
+供给、提供
+
+conduct
+组织、实施、指挥、引导
+
+determine
+决定、确定
+
+feature
+特色、特征、容貌
+
+involve
+包含、牵涉、使陷于
+
+occur
+发生、出现、存在
+
+purchase
+购买、获得
+
+vehicle
+车辆、工具、交通工具
+
+recovery
+恢复、复原、痊愈
+
+draw
+画、拉，吸引
+
+journal
+日报、杂志、日记
+
+majority
+多数
+
+mission
+使命、任务
+
+prefer
+更喜欢、宁愿、提出
+
+status
+地位、状态
+
+strategy
+战略、策划
+
+surface
+表面、表层、外观
+
+appeal
+呼吁、恳求、上述
+
+consumption
+消费、消耗
+
+decline
+下降、衰退
+
+figure
+数字、任务、图形、计算、出现
+
 
 ```
