--- a/docs/每日英语/高频单词.md
+++ b/docs/每日英语/高频单词.md
@@ -382,5 +382,30 @@ decline
 figure
 数字、任务、图形、计算、出现
 
+labor
+劳动、工作、劳工
 
+motivate
+刺激、使有动机
+
+native
+本国的、天然的、本地人
+
+overall
+全部的、全体的
+
+reserve
+预订、预备、拥有
+
+senior
+高级的、年长的
+
+solution
+解决方案、溶解、解答
+
+survive
+幸存、生还、幸免于
+
+specific
+特殊的、特定的、明确的、详细的
 ```
