--- a/docs/每日英语/高频单词.md
+++ b/docs/每日英语/高频单词.md
@@ -1,3 +1,17 @@
+---
+title: 高频单词
+header-includes:
+ - \usepackage{fvextra}
+ - \DefineVerbatimEnvironment{Highlighting}{Verbatim}{breaklines,commandchars=\\\{\}}
+output:
+  pdf_document:
+    latex_engine: xelatex
+    toc: true
+    template: C:/Huaxv/Huaxv-Tool/markdown-preview=enhanced/template.tex
+    highlight: tango
+    path: C:/Users/huaxv/Desktop/高频单词.pdf
+---
+
 # 高频单词
 
 ```
@@ -408,4 +422,69 @@ survive
 
 specific
 特殊的、特定的、明确的、详细的
+
+adopt
+采取、接受、收养
+
+argue
+争论、辩论
+
+crowd
+人群、观众、众多
+
+despite
+即使、尽管
+
+fund
+基金、资金、存款
+
+pattern
+模式、图案、样品
+
+regard
+注意、尊重、凝视
+
+review
+回顾、检查、复习
+
+shortage
+缺乏、缺少
+
+threat
+威胁、恐吓、凶兆
+
+tobacco
+烟草、烟叶
+
+attend
+出席、致力于、照料、照顾
+
+commercial
+商业的、营利的
+
+crop
+产量、农作物、种植、收割
+
+establish
+建立、创立、确立
+
+facility
+设施、设备、容易、灵巧、才能
+
+maintain
+维持、继续、维修、主张
+
+official
+官方的、正式的、公务的
+
+previous
+以前的、早先的
+
+reveal
+显示、透露、揭露、泄露
+
+craft
+工艺、手艺、太空船
+
+
 ```
