--- a/docs/每日英语/高频单词.md
+++ b/docs/每日英语/高频单词.md
@@ -486,5 +486,42 @@ reveal
 craft
 工艺、手艺、太空船
 
+advice
+建议、忠告、劝告
 
+board
+上火车、飞机、船等
+
+conflict
+突、矛盾、斗争、争执
+
+consequence
+结果、重要性、推论
+
+crisis
+危机、决定性时刻、危机的
+
+emerge
+浮现、摆脱、暴露
+
+enhance
+提高、加强、增加
+
+explore
+探索、探测、探险
+
+resident
+居住的、定居的、常驻的
+
+seek
+寻求、寻找、探索、搜索
+
+spot
+地点、斑点、认出、弄脏
+
+struggle
+奋斗、斗争、搏斗
+
+urban
+城市的、住在都市的
 ```
