--- a/docs/筑基期/古典概率.md
+++ b/docs/筑基期/古典概率.md
@@ -36,10 +36,32 @@ $$
 
 将 $n$ 个不同的物件分成 $k$ 堆，各堆物件数分别是：$r_1, r_2, \cdots, r_k$，有多少种分法？
 
-![未命名绘图.-第 2 页.drawio](/assets/未命名绘图.-第%202%20页.drawio.png)
+![k堆图片](./img/k堆图片.png)
 
 > 想象成 $n$ 个座位，其中第 $r_i$ 与 $r_{i + 1}$ 座位之间有隔道，那么对 $n$ 个学生全排列有 $n!$ 种排列方法，对于每一种排列方法，会产生 $r_1!r_2! \cdots r_k!$ 种重复，所以实际上不同的分堆种类有：
 
 $$
 \frac{n!}{r_1! r_2! \cdots r_k!}
+$$
+
+---
+
+有 $N$ 个产品，其中有 $M$ 个废品，现从中取出 $n$ 个，问这 $n$ 个中存在 $m$ 个废品的概率是多少？
+
+> 总共有 $C^N_n$ 种取法，取出 $m$ 个废品，这 $m$ 个废品的组合有 $C^M_m$ 种，剩下需要从 $N - M$ 中取出 $n - m$ 个产品，有 $C^{N-M}_{n-m}$ 种取法，所以答案为：
+
+$$
+\frac{C^M_m C^{N-M}_{n-m}}{C^N_n}
+$$
+
+---
+
+有 $n$ 双不同的鞋，现在需要你随机分成 $n$ 堆，每堆有 $2$ 个鞋子，问每一堆鞋都自成一对的概率是多少？
+
+> 总共有 $2n$ 个位置，有 $(2n)!$ 种随机排列方法；
+>
+> 总共有 $n$ 双鞋，有 $n!$ 种排列方法，由于每一堆都有 $2!$ 排列方法，所以总共有 $n!2^n$ 种可以自成一对的排列方法，概率为：
+
+$$
+\frac{n!2^n}{(2n)!}
 $$
