--- a/docs/筑基期/古典概率.md
+++ b/docs/筑基期/古典概率.md
@@ -65,3 +65,17 @@ $$
 $$
 \frac{n!2^n}{(2n)!}
 $$
+
+---
+
+有 $n$ 个男孩，$m$ 个女孩随机的排成一列，其中 $m \leq (n + 1)$，问任意两个女孩都不相邻的概率是多少？
+
+> 有 $n$ 个男孩，就有 $n + 1$ 个空位，从 $n + 1$ 个空位中选出 $m$ 个给女生坐，而这 $m$ 个女生又可以有 $m$ 种不同的排列方法，所以女生总共有 $C^{n + 1}_m * m!$ 种坐法
+>
+> 对 $m$ 个女生全排列，有 $m!$ 种排列方法，对于任意一个女生都可以选择 $n+1$ 种做法，所以总共有 $(n+1)^m * m!$
+>
+> 概率为：
+
+$$
+\frac{C^{n+1}_{m}}{(n+1)^m}
+$$
