--- a/docs/筑基期/古典概率.md
+++ b/docs/筑基期/古典概率.md
@@ -72,10 +72,10 @@ $$
 
 > 有 $n$ 个男孩，就有 $n + 1$ 个空位，从 $n + 1$ 个空位中选出 $m$ 个给女生坐，而这 $m$ 个女生又可以有 $m$ 种不同的排列方法，所以女生总共有 $C^{n + 1}_m * m!$ 种坐法
 >
-> 对 $m$ 个女生全排列，有 $m!$ 种排列方法，对于任意一个女生都可以选择 $n+1$ 种做法，所以总共有 $(n+1)^m * m!$
+> 对于第一个女生可以选择 $n + 1$ 个座位，第二个女生可以选择 $n + 2$ 个座位，一直到第 $m$ 个女生可以选择 $n + m$ 个座位，所以总共有 $(n+1)(n+2)\cdots(n+m)=\frac{(n+m)!}{n!}$ 种选法
 >
 > 概率为：
 
 $$
-\frac{C^{n+1}_{m}}{(n+1)^m}
+\frac{C^{n+1}_{m} * m!}{\frac{(n+m)!}{n!}}=\frac{C^{n+1}_{m}}{C^{n+m}_{m}}
 $$
