--- a/docs/筑基期/古典概率.md
+++ b/docs/筑基期/古典概率.md
@@ -79,3 +79,13 @@ $$
 $$
 \frac{C^{n+1}_{m} * m!}{\frac{(n+m)!}{n!}}=\frac{C^{n+1}_{m}}{C^{n+m}_{m}}
 $$
+
+另外一种理解方法：
+
+> 先对这 $n$ 个男生自由排列，有 $n!$ 种排列方式，然后在 $n + 1$ 个位置中选出 $m$ 个位置自由排列，有 $P^{n+1}_{m}$ 种排列方式，所以女生互不相邻的排列方式有 $n!P^{n+1}_{m}$ 种
+>
+> 事件总和为 $n + m$ 个孩子的自由组合，有 $(n+m)!$ 种排列方式，所以概率为：
+
+$$
+\frac{n!P^{n+1}_{m}}{(n+m)!}=\frac{C^{n+1}_{m}}{C^{n+m}_{m}}
+$$
