--- a/docs/筑基期/古典概率.md
+++ b/docs/筑基期/古典概率.md
@@ -68,7 +68,7 @@ $$
 
 ---
 
-有 $n$ 个男孩，$m$ 个女孩随机的排成一列，其中 $m \leq (n + 1)$，问任意两个女孩都不相邻的概率是多少？
+有 $n$ 个男孩，$m$ 个女孩随机的**排成一列**，其中 $m \leq (n + 1)$，问任意两个女孩都不相邻的概率是多少？
 
 > 有 $n$ 个男孩，就有 $n + 1$ 个空位，从 $n + 1$ 个空位中选出 $m$ 个给女生坐，而这 $m$ 个女生又可以有 $m$ 种不同的排列方法，所以女生总共有 $C^{n + 1}_m * m!$ 种坐法
 >
@@ -88,4 +88,22 @@ $$
 
 $$
 \frac{n!P^{n+1}_{m}}{(n+m)!}=\frac{C^{n+1}_{m}}{C^{n+m}_{m}}
+$$
+
+---
+
+有 $n$ 个男孩，$m$ 个女孩随机的**排成一圈**，其中 $m \leq n$，问任意两个女孩都不相邻的概率是多少？
+
+> 将 $n$ 个不同的物品排成一列，有 $n!$ 种排列方法
+>
+> 将 $n$ 个不同的物品排成一圈，有 $\frac{n!}{n}$ 种排列方法，在排成一列的基础上，每一种排列因为开头设置不同会有 $n$ 种开头方式导致重复，所以要除以 $n$
+>
+> 回到题目，先对 $n$ 个男的围成一圈，有 $\frac{n!}{n}$ 种排列方法，从 $n$ 个相间位置中选取 $m$ 个，有 $C^n_m$ 种选法，女生可以对这 $m$ 个位置自由排列，所以满足任意两个女生不相邻的排列方式有 $\frac{n!m!C^n_m}{n}$ 种
+>
+> 这 $n + m$ 个孩子围成一圈总共有 $\frac{(n+m)!}{n+m}$ 种方式
+>
+> 概率为：
+
+$$
+\frac{\frac{n!m!C^n_m}{n}}{\frac{(n+m)!}{n+m}}=\frac{C^n_m * (n+m)}{C^{n+m}_m * n}=\frac{C^n_m}{C^{n+m-1}_m}
 $$
