--- a/docs/筑基期/古典概率.md
+++ b/docs/筑基期/古典概率.md
@@ -116,4 +116,12 @@ $$
 >
 > 由于发现某盒为空时就会停止，说明这棵概率树并不是一颗完全树，即叶子节点并不都处于同一层，但是我们可以添加虚拟节点来延长比较短的那个分支，让这棵树的叶子节点都处于同一层，计算概率时只需要统计由这个叶子节点引发的虚拟叶子节点的个数占总叶子节点的个数多少就可以求出该叶子节点引发的概率了
 >
-> 回到题目，要有利于题目条件的发生，则必须要抽 $2n - m + 1$ 次才能发现某盒已经空了，且剩下那一盒有 $m$ 支烟，
+> 回到题目，要有利于题目条件的发生，则必须要抽 $2n - m + 1$ 次才能发现某盒已经空了，且剩下那一盒有 $m$ 支烟
+>
+> 所以总共的抽取方法有 $2 ^ {2n - m + 1}$ 种（每一次要么抽甲要么抽乙，等概率抽取）
+>
+> 最后一盒要么是甲空要么是乙空，所以有 $2$ 种镜像对称的结果，因为最后一次一定要抽取空盒，所以在 $2n - m$ 次中，需要分割成两份，第一份有 $n$ 个，第二份有 $n - m$ 个，有 $C^{2n-m}_{n}$ 种分法，有利于题目事件发生的概率为：
+
+$$
+\frac{2 * C^{2n-m}_{n}}{2 ^ {2n - m + 1}}=\frac{C^{2n-m}_{n}}{2n - m + 1}
+$$
