--- a/docs/筑基期/古典概率.md
+++ b/docs/筑基期/古典概率.md
@@ -14,7 +14,7 @@ output:
 
 # 古典概率
 
-从 $n$ 个不同的物件中取 $r$ 个的不同排列总数是多少？
+『题目』从 $n$ 个不同的物件中取 $r$ 个的不同排列总数是多少？
 
 > 从 $n$ 个中取 $r$ 个有 $C^n_r$ 种取法
 >
@@ -26,7 +26,7 @@ $$
 
 ---
 
-从 $n$ 个不同的物件中选 $r$ 个，有多种不同的取法？
+『题目』从 $n$ 个不同的物件中选 $r$ 个，有多种不同的取法？
 
 $$
 ans=C^n_r=\frac{n!}{r!(n - r)!}
@@ -34,7 +34,7 @@ $$
 
 ---
 
-将 $n$ 个不同的物件分成 $k$ 堆，各堆物件数分别是：$r_1, r_2, \cdots, r_k$，有多少种分法？
+『题目』将 $n$ 个不同的物件分成 $k$ 堆，各堆物件数分别是：$r_1, r_2, \cdots, r_k$，有多少种分法？
 
 ![k堆图片](./img/k堆图片.png)
 
@@ -46,7 +46,7 @@ $$
 
 ---
 
-有 $N$ 个产品，其中有 $M$ 个废品，现从中取出 $n$ 个，问这 $n$ 个中存在 $m$ 个废品的概率是多少？
+『题目』有 $N$ 个产品，其中有 $M$ 个废品，现从中取出 $n$ 个，问这 $n$ 个中存在 $m$ 个废品的概率是多少？
 
 > 总共有 $C^N_n$ 种取法，取出 $m$ 个废品，这 $m$ 个废品的组合有 $C^M_m$ 种，剩下需要从 $N - M$ 中取出 $n - m$ 个产品，有 $C^{N-M}_{n-m}$ 种取法，所以答案为：
 
@@ -56,7 +56,7 @@ $$
 
 ---
 
-有 $n$ 双不同的鞋，现在需要你随机分成 $n$ 堆，每堆有 $2$ 个鞋子，问每一堆鞋都自成一对的概率是多少？
+『题目』有 $n$ 双不同的鞋，现在需要你随机分成 $n$ 堆，每堆有 $2$ 个鞋子，问每一堆鞋都自成一对的概率是多少？
 
 > 总共有 $2n$ 个位置，有 $(2n)!$ 种随机排列方法；
 >
@@ -68,7 +68,7 @@ $$
 
 ---
 
-有 $n$ 个男孩，$m$ 个女孩随机的**排成一列**，其中 $m \leq (n + 1)$，问任意两个女孩都不相邻的概率是多少？
+『题目』有 $n$ 个男孩，$m$ 个女孩随机的**排成一列**，其中 $m \leq (n + 1)$，问任意两个女孩都不相邻的概率是多少？
 
 > 有 $n$ 个男孩，就有 $n + 1$ 个空位，从 $n + 1$ 个空位中选出 $m$ 个给女生坐，而这 $m$ 个女生又可以有 $m$ 种不同的排列方法，所以女生总共有 $C^{n + 1}_m * m!$ 种坐法
 >
@@ -92,7 +92,7 @@ $$
 
 ---
 
-有 $n$ 个男孩，$m$ 个女孩随机的**排成一圈**，其中 $m \leq n$，问任意两个女孩都不相邻的概率是多少？
+『题目』有 $n$ 个男孩，$m$ 个女孩随机的**排成一圈**，其中 $m \leq n$，问任意两个女孩都不相邻的概率是多少？
 
 > 将 $n$ 个不同的物品排成一列，有 $n!$ 种排列方法
 >
@@ -110,7 +110,7 @@ $$
 
 ---
 
-一个人在口袋里放了 $2$ 盒火柴，每盒 $n$ 支，每次抽烟时从口袋随机拿出一盒（抽出甲盒或乙盒）并用掉一支烟，到某次他迟早会发现：取出的那一盒空了，问这时候另外一盒恰好有 $m$ 支火柴的概率是多少？
+『题目』一个人在口袋里放了 $2$ 盒火柴，每盒 $n$ 支，每次抽烟时从口袋随机拿出一盒（抽出甲盒或乙盒）并用掉一支烟，到某次他迟早会发现：取出的那一盒空了，问这时候另外一盒恰好有 $m$ 支火柴的概率是多少？
 
 > 每一次抽取只有等概率两种选择，要么抽甲的，要么抽乙的，抽到一定时候，会发现抽到盒子里面没有烟了，这种概率是否符合一棵超级庞大的概率树呢？
 >
@@ -125,3 +125,4 @@ $$
 $$
 \frac{2 * C^{2n-m}_{n}}{2 ^ {2n - m + 1}}=\frac{C^{2n-m}_{n}}{2n - m + 1}
 $$
+
