--- a/docs/筑基期/古典概率.md
+++ b/docs/筑基期/古典概率.md
@@ -142,3 +142,12 @@ $$
 
 ---
 
+『题目』$n$ 本书随机地分给甲、乙二人，问甲、乙各至少得到 $1$ 本书的概率是多少？
+
+> 事件总数有 $2 ^ n$ 种
+>
+> 不利于题目事件发生，也就是甲得到 0 本或者乙得到 0 本，有 $2$ 种，所以有利于题目事件发生的概率为：
+
+$$
+1 - \frac{1}{2 ^ {n - 1}}
+$$
