--- a/docs/筑基期/古典概率.md
+++ b/docs/筑基期/古典概率.md
@@ -151,3 +151,10 @@ $$
 $$
 1 - \frac{1}{2 ^ {n - 1}}
 $$
+
+---
+
+『题目』甲、乙两人下棋，每局甲胜的概率为 $a$，乙胜的概率为 $b$，假设没有和局的情况发生，由于 $a > b$ 为了考虑公平性，最终决定胜负规则如下：到什么时候为止，甲连胜三局则甲胜；到什么时候为止，乙连胜两局则乙胜；问甲最终胜的概率？
+
+> 如果到达某一轮时，是甲赢，假设此时是第 $n$ 轮，如果甲最终赢，则后缀一定是 "甲甲甲"，为了方便研究，记 $E$ 为当前轮次甲赢，记 $F$ 为当前轮次乙赢，则后缀一定是 $EEE$ 且前面 $n-3$ 轮不能出现 $EEE$ 和 $FF$ 且最后一个必定是 $F$，这种概率是多少呢？这种概率可以用「线性dp」来解
+ 
