--- a/docs/筑基期/古典概率.md
+++ b/docs/筑基期/古典概率.md
@@ -158,11 +158,7 @@ $$
 
 > 如果到达某一轮时，是甲赢，假设此时是第 $n$ 轮，如果甲最终赢，则后缀一定是 "甲甲甲"，为了方便研究，记 $E$ 为当前轮次甲赢，记 $F$ 为当前轮次乙赢，则后缀一定是 $EEE$ 且前面 $n-3$ 轮不能出现 $EEE$ 和 $FF$ 且最后一个必定是 $F$，这种概率是多少呢？这种概率当然用「线性dp」来解，那能不能用一条公式求解呢？仔细想想，不能出现连续的 $EEE$ 和 $FF$ 说明该序列一定是由 $E$、$EE$、$F$ 组合，且 $E$ 和 $EE$ 不能连续出现，$F$ 与 $F$ 之间也不能连续出现;
 > 
-> $E$ 发生的概率为 $a$，$EE$ 发生的概率为 $a^2$，$F$ 发生的概率为 $b$，然而这样真的对吗？
-> 
-> 若 $E$ 有 $x$ 个，$EE$ 有 $y$ 个，要求甲最终胜，则乙要么有 $x+y$ 个，要么有 $x+y+1$ 个所以概率有：$(x+y)! * a^x * a^{2y} * b ^ {x+y} * (1 + b) * a^3$ 简化后：$(x+y)! * a^{x + 2y + 3} * b ^ {x +y} * (1+b)$，所以有利于题目事件发生的概率为：
+> $E$ 发生的概率为 $a$，$EE$ 发生的概率为 $a^2$，$F$ 发生的概率为 $b$，然而这样真的对吗？$a+b=1$ 则 $a+b+a^2 > 1$ 总感觉有问题因为这些时间不是互相独立的，如果前面 $F$ 发生了，那么接下来要么是 $E$ 发生，要么就是 $EE$ 发生，这样子才出现了对立且独立的事件，然后接着又会是 $F$ 发生开始下一轮的循环
 
-$$
-\sum^{+\infty}_{x=0}\sum^{+\infty}_{y=0}(x+y)! * a^{x + 2y + 3} * b ^ {x +y} * (1+b)
-$$
+
   
