--- a/docs/筑基期/古典概率.md
+++ b/docs/筑基期/古典概率.md
@@ -158,11 +158,6 @@ $$
 
 > 如果到达某一轮时，是甲赢，假设此时是第 $n$ 轮，如果甲最终赢，则后缀一定是 "甲甲甲"，为了方便研究，记 $E$ 为当前轮次甲赢，记 $F$ 为当前轮次乙赢，则后缀一定是 $EEE$ 且前面 $n-3$ 轮不能出现 $EEE$ 和 $FF$ 且最后一个必定是 $F$，这种概率是多少呢？这种概率当然用「线性dp」来解，那能不能用一条公式求解呢？仔细想想，不能出现连续的 $EEE$ 和 $FF$ 说明该序列一定是由 $E$、$EE$、$F$ 组合，且 $E$ 和 $EE$ 不能连续出现，$F$ 与 $F$ 之间也不能连续出现;
 > 
-> $E$ 发生的概率为 $a$，$EE$ 发生的概率为 $a^2$，$F$ 发生的概率为 $b$，然而这样真的对吗？$a+b=1$ 则 $a+b+a^2 > 1$ 总感觉有问题因为这些时间不是互相独立的，如果前面 $F$ 发生了，那么接下来要么是 $E$ 发生，要么就是 $EE$ 发生，这样子才出现了对立且独立的事件，然后接着又会是 $F$ 发生开始下一轮的循环
->
-> 一开始要么是 $F$ 发生，要么 $F$ 不发生，接下来要么是 $E$ 发生要么就是 $EE$ 发生，再接下来 $F$ 一定发生，假设 $E$ 发生了 $x$ 轮，$EE$ 发生了 $y$ 轮，若一开始 $F$ 发生了，则有利于甲最终胜的概率为：$b * (x+y)! * a ^ x * (1-a)^y * b ^ {x+y}*a^3=a^3b(x+y)!a^x(1-a)^yb^{x+y}$
->
-> 若一开始 $F$ 并没有发生，且 $E$ 发生了 $x$ 轮，$EE$ 发生了 $y$ 轮
-
+> $E$ 发生的概率为 $a$，$EE$ 发生的概率为 $a^2$，$F$ 发生的概率为 $b$
 
   
